# slipstream

./: .gitignore  AGENTS.md  LOCAL_DEVELOPMENT.md  Makefile  README.md  RELEASE.md
.github/actions/prepare_environment/: action.yml
.github/workflows/: local-multi-agent-image.yml  release-macos.yml  session-sharing-relay-image.yml
app/: Cargo.toml  build.rs
app/channels/oss/: com.slipstream.app.desktop
app/src/: app_menus.rs  app_state.rs  lib.rs  root_view.rs
app/src/ai/: llms.rs  llms_tests.rs  persisted_workspace.rs  request_usage_model_test.rs  request_usage_model_tests.rs
app/src/auth/: auth_override_warning_body.rs  auth_view_body.rs  auth_view_shared_helpers.rs  login_slide.rs  mod.rs
app/src/autoupdate/: linux.rs  mac.rs  windows.rs
app/src/code_review/: diff_state.rs
app/src/codex_app_server/: mod.rs  pending_approval_e2e_tests.rs  snapshot_e2e_tests.rs
app/src/context_chips/: current_prompt.rs  current_prompt_test.rs  current_prompt_tests.rs  mod.rs  prompt_tests.rs
app/src/local_multi_agent/: mod.rs
app/src/login_item/: windows.rs
app/src/opencode_server/: mod.rs  mod_tests.rs
crates/ai/: Cargo.toml
crates/local_multi_agent_service/: Cargo.toml  Dockerfile  README.md  config-schema.json
crates/local_multi_agent_service/src/: config.rs  graphql.rs  lib.rs  logger.rs  main.rs  model.rs  provider.rs  request.rs  response.rs  server.rs  store.rs
crates/session-sharing-relay/: Cargo.toml  Dockerfile  README.md
crates/session-sharing-relay/src/: main.rs
crates/warpui/: build.rs
script/: capture_codex_approval.mjs  prepare_bundled_resources  update_plist
script/linux/: bundle  bundle_appimage  bundle_arch  bundle_deb  bundle_rpm  linuxdeploy-plugin-warp
script/macos/: bundle  create_local_codesign_identity  grant_keychain_access_to_team  repro_launchd_shell_bootstrap  run  signing_status
script/windows/: bundle.ps1  prepare_bundled_resources.ps1  windows-installer.iss
specs/BYOK-local-multi-agent/: PLAN.md
tools/local-multi-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config-schema.json  package-lock.json  package.json
(+199 files in other folders)
