[package]
name = "local_multi_agent_service"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "warp-local-multi-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
diesel = { workspace = true, features = ["sqlite", "chrono"] }
futures.workspace = true
futures-util = { workspace = true, features = ["std"] }
http.workspace = true
log.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
rustls = { version = "0.23.39", default-features = false, features = ["ring", "std"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower.workspace = true
uuid.workspace = true
warp_multi_agent_api.workspace = true

[dev-dependencies]
tempfile.workspace = true
