[package]
name = "session-sharing-relay"
version = "0.1.0"
edition = "2021"
authors = ["Warp Team <dev@warp.dev>"]
license = "AGPL-3.0-only"
publish = false

[[bin]]
name = "session-sharing-relay"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
session-sharing-protocol = { git = "https://github.com/warpdotdev/session-sharing-protocol.git", rev = "3a12b871dfd1019a66057e4d9b7d5c812b73ee8c" }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
